{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 94,
  "lineage": "20253948-e6f9-641b-4b65-46d4c4323bf1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0701e21c502689c31",
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:instance/i-0b488707c54031a80",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b488707c54031a80",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "common_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0991a220a4690110e",
            "private_dns": "ip-10-1-0-228.ap-northeast-1.compute.internal",
            "private_ip": "10.1.0.228",
            "public_ip": "13.231.237.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0260160c1f1359d95",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ffb4610fce8297eb",
            "tags": {
              "Name": "sample-hito-ec2-ansible"
            },
            "tags_all": {
              "Name": "sample-hito-ec2-ansible"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04de5afd617e8ca8f"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-ssh",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0701e21c502689c31",
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:instance/i-0120506e5057664b6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0120506e5057664b6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "common_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06842db4f39a7570e",
            "private_dns": "ip-10-1-0-114.ap-northeast-1.compute.internal",
            "private_ip": "10.1.0.114",
            "public_ip": "18.181.182.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b11c21490af138cc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ffb4610fce8297eb",
            "tags": {
              "Name": "sample-hito-ec2-web"
            },
            "tags_all": {
              "Name": "sample-hito-ec2-web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04de5afd617e8ca8f",
              "sg-0daa9f0fd8586f7a8"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-http",
            "aws_security_group.sg-ssh",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:internet-gateway/igw-033709bccfed08ba0",
            "id": "igw-033709bccfed08ba0",
            "owner_id": "296066267476",
            "tags": {
              "Name": "sample-hito-igw"
            },
            "tags_all": {
              "Name": "sample-hito-igw"
            },
            "vpc_id": "vpc-079ec29252ee266ae"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:route-table/rtb-054dd88ade88d26e8",
            "id": "rtb-054dd88ade88d26e8",
            "owner_id": "296066267476",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-033709bccfed08ba0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sample-hito-rtb"
            },
            "tags_all": {
              "Name": "sample-hito-rtb"
            },
            "vpc_id": "vpc-079ec29252ee266ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ea05f9d9dca9846",
            "route_table_id": "rtb-054dd88ade88d26e8",
            "subnet_id": "subnet-0ffb4610fce8297eb"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:security-group/sg-0daa9f0fd8586f7a8",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0daa9f0fd8586f7a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-hito-sg-http",
            "name_prefix": "",
            "owner_id": "296066267476",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sample-hito-sg-http"
            },
            "tags_all": {
              "Name": "sample-hito-sg-http"
            },
            "timeouts": null,
            "vpc_id": "vpc-079ec29252ee266ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:security-group/sg-04de5afd617e8ca8f",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04de5afd617e8ca8f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tf-hito-sg-ssh",
            "name_prefix": "",
            "owner_id": "296066267476",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sample-hito-sg-ssh"
            },
            "tags_all": {
              "Name": "sample-hito-sg-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-079ec29252ee266ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:subnet/subnet-0ffb4610fce8297eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0ffb4610fce8297eb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296066267476",
            "tags": {
              "Name": "sample-hito-sbn-1a"
            },
            "tags_all": {
              "Name": "sample-hito-sbn-1a"
            },
            "vpc_id": "vpc-079ec29252ee266ae"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:vpc/vpc-079ec29252ee266ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-024f4cfbe261f4ea7",
            "default_route_table_id": "rtb-0a4b2d67a30175bc5",
            "default_security_group_id": "sg-062a4fe6623952150",
            "dhcp_options_id": "dopt-053c0fa1f2f5deb1b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-079ec29252ee266ae",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a4b2d67a30175bc5",
            "owner_id": "296066267476",
            "tags": {
              "Name": "sample-hito-vpc"
            },
            "tags_all": {
              "Name": "sample-hito-vpc"
            }
          }
        }
      ]
    }
  ]
}